# Autonomous_drone_juuksur

Electronics/REV3/: Droon_REV3.PrjPCB  Droon_REV3.PrjPCBStructure  Droon_REV3.SchDoc  Droon_REV3.xlsx  FC_PiHat_REV1.PcbDoc  FC_PiHat_REV1.PcbDoc.htm  Power 3V3.SchDoc  Power 5V.SchDoc  ~$Droon_REV3.xlsx
Electronics/REV3/PiHat_REV1 CAD/: FC_PiHat_REV1.step
Electronics/REV3/Project Outputs for Droon_REV3/: FC_PiHat_REV1-macro.APR_LIB  FC_PiHat_REV1.DRR  FC_PiHat_REV1.EXTREP  FC_PiHat_REV1.G1  FC_PiHat_REV1.G2  FC_PiHat_REV1.GBL  FC_PiHat_REV1.GBO  FC_PiHat_REV1.GBS  FC_PiHat_REV1.GKO  FC_PiHat_REV1.GM1  FC_PiHat_REV1.GM13  FC_PiHat_REV1.GM15  FC_PiHat_REV1.GTL  FC_PiHat_REV1.GTO  FC_PiHat_REV1.GTS  FC_PiHat_REV1.LDP  FC_PiHat_REV1.REP  FC_PiHat_REV1.RUL  FC_PiHat_REV1.TXT  FC_PiHat_REV1.apr  Status Report.Txt
Electronics/REV3/__Previews/: Droon_REV3.SchDocPreview  Power 3V3.SchDocPreview  Power 5V.SchDocPreview
Mechanics/REV3/Poola voistlus 2020 V1/Smarterdrone redesign/: Aku kinnitus 1.SLDPRT  Drone_arm.SLDPRT  Droon_custom_PCB.SLDPRT  Drooni jalg V6.SLDPRT  Drooni jalg V7.SLDPRT  Drooni riputi.SLDPRT  Flexi seib.SLDPRT  Jala kinnitus V3.SLDPRT  Kaamera cover.SLDPRT  Lidari kaitse.SLDPRT  Mutter.SLDPRT  Pisem kaamera nurk.SLDPRT  Post.SLDPRT  Propeller CCW.SLDPRT  Propeller CW.SLDPRT  Puks_suur.SLDPRT  Puks_vaike.SLDPRT  Raspberry kinnitus v1.1.SLDPRT  Raspberry pi CAMERA V2.SLDASM  Reciever_assembly.SLDASM  Reciever_seib.SLDPRT  TFmini lidar sensor CAD.SLDPRT  (+14 more)
Mechanics/REV4/: IMU 6050 kinnitus.SLDPRT  Kaabite hoidik.SLDPRT  Kaablite hoidiku test.SLDASM  Lidari hoidik vl53l1x-ga.SLDASM  Lidari kaitse koos VL53L1X.SLDPRT  Lintkaabli hoidik.SLDPRT  Spacer.SLDPRT  vl53l1x hoidik koos lidariga oiget pidi.SLDPRT  vl53l1x hoidik.sldprt  vl53l1x moodul.SLDPRT
Mechanics/REV4/STL/: Kaabite hoidik.STL  Spacer.STL
Mechanics/test/: Aku kinnitusplaat.SLDPRT  Alumine elektroonika.SLDASM  Drooni jalg V7.SLDPRT  FC.SLDPRT  FUNDA 13.SLDPRT  Flexi seib.SLDPRT  JST XHP-4.SLDPRT  Jala kinnitus V3.SLDPRT  Kaabite hoidik.SLDPRT  Kaablite hoidiku test.SLDASM  Kaamera cover.SLDPRT  Mutter.SLDPRT  NUCLEO 13.SLDPRT  Propeller CW.SLDPRT  Puks_suur.SLDPRT  Raspberry pi CAMERA V2.SLDASM  Reciever_assembly.SLDASM  Spacer.SLDPRT  TATTU 1300mah 4s.SLDASM  TFmini lidar sensor CAD.SLDPRT  XT60 Buchse.SLDPRT  XT60 MALE.SLDPRT  aku_kaas.SLDPRT  aku_vahesein.SLDPRT  akuplaat.v2.SLDPRT  flight controller.SLDPRT  jala assembly.SLDASM  jala_seib2.SLDPRT  juhtme_guide.SLDPRT  receiver_kinnitus.SLDPRT  reciever.SLDPRT  testimisaas.SLDPRT  vaheplaat.SLDPRT  vaheplaat2.SLDPRT  vana aku adapter.SLDPRT
Mechanics/test/3D_print/: aku_kaas.STL  aku_vahesein.2tk.STL  akuplaat.v2.STL  receiver_kinnitus.STL  testimisaas.STL  vahepuks.4tk.STL
Software/juuksur-master/: pax_global_header
Software/juuksur-master/JuuksurStm32/: JuuksurStm32.ioc
Software/juuksur1/src/: CTestConfiguration.ini
Software/juuksur2/: deploy.sh
Software/juuksur2.1/JuuksurStm32/: .cproject  .mxproject  .project  JuuksurStm32.ioc  Makefile  STM32F303RDTx_FLASH.ld  flash.sh
Software/juuksur2.1/SmartDrone-master-src-camera/src/camera/: CMakeLists.txt  package.xml
Software/juuksur2.1/SmartDrone-master-src-camera/src/camera/src/: camera_node.cpp
Software/juuksur2.1/droonF303K8/: flash.sh
Software/juuksur2.1/latest/juuksur/src/autonomous_flight/: CMakeLists.txt
Software/juuksur2.1/latest/juuksur/src/autonomous_flight/src/: autonomous_controller.cpp  autonomous_controller.hpp  autonomous_flight.hpp  autonomous_flight_node.cpp  localization.cpp  localization.hpp  params.cpp  params.hpp  structures.hpp  velocity_controller.cpp  velocity_controller.hpp
Software/juuksur2.1/latest/juuksur/src/camera_recognition/: CMakeLists.txt  package.xml
Software/juuksur2.1/latest/juuksur/src/camera_recognition/config/: node.yaml
Software/juuksur2.1/latest/juuksur/src/camera_recognition/src/: camera_recognition_node.cpp
Software/juuksur2.1/latest/juuksur/src/raspicam_camera/: CMakeLists.txt  package.xml
Software/juuksur2.1/latest/juuksur/src/raspicam_camera/raspicam/: CMakeLists.txt  config.cmake.in
Software/juuksur2.1/latest/juuksur/src/raspicam_camera/raspicam/src/: raspicam_cv.cpp
Software/juuksur2.1/latest/juuksur/src/raspicam_camera/src/: raspicam_camera_node.cpp
Software/juuksur2.1/latest/juuksur/src/simulator_camera/: CMakeLists.txt
Software/juuksur2.1/latest/juuksur/src/simulator_camera/src/: camera_node.cpp
Software/juuksur2/src/: README.md
Software/juuksur2/src/autonomous_flight/: CMakeLists.txt  package.xml
Software/juuksur2/src/autonomous_flight/src/: BezierSpline.cpp  autonomous_controller.cpp  autonomous_flight_node.cpp  localization.cpp  localization.hpp  params.cpp  params.hpp
Software/juuksur2/src/dev_msgs/: CMakeLists.txt
Software/juuksur2/src/dev_msgs/msg/: AttitudeData.msg  KeyData.msg  MoveData.msg  SwitchData.msg
juuksur-master/: .gitlab-ci.yml  .gitmodules  README.md
juuksur-master/JuuksurStm32/: .mxproject  Makefile  STM32F303RDTx_FLASH.ld
juuksur-master/JuuksurStm32/Inc/: gpio.h  stm32f3xx_hal_conf.h  tfmini_stm32.h  tim.h  usart.h  vl53l1_platform_user_data.h
juuksur-master/JuuksurStm32/Src/: failsafe.c  gpio.c  ibus.c  main.c  mpu6050.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c  tim.c  usart.c  vl53l1_platform.c
juuksur1/src/atomic_configure/: catkin_make  catkin_test_results  local_setup.sh
juuksur1/src/catkin/: .tar
juuksur1/src/catkin_generated/: generate_cached_setup.py  order_packages.cmake  setup_cached.sh
juuksur1/src/devel/: .catkin  .rosinstall  setup.sh
juuksur1/src/genmsg/: .tar
juuksur1/src/genpy/: .tar
juuksur1/src/rosconsole/: .tar
juuksur1/src/roslisp/: .tar
juuksur2/src/dev_msgs/: package.xml
juuksur2/src/monte_carlo_localization/: landmarks.cpp  main.cpp
juuksur2/src/raspi_telemetry/: CMakeLists.txt
juuksur2/src/raspi_telemetry/src/: encoder.h
juuksur2/src/raspicam_camera/: CMakeLists.txt
juuksur2/src/simulator_io/: package.xml
juuksur2/src/state_machine/: package.xml
juuksur2/src/stm32_io/: CMakeLists.txt
juuksur2/src/ttmath/: CMakeLists.txt
(+431 files in other folders)
