<?xml version="1.0"?>
<package format="2">
  <name>autonomous_flight</name>
  <version>0.0.0</version>
  <description>The autonomous_flight package</description>

  <maintainer email="ttammear@todo.todo">ttammear</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dev_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>ttmath</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>dev_msgs</build_export_depend>

  <export>
  </export>
</package>
